# PersonalFinancePy

./: .pre-commit-config.yaml  README.md  blank_expense_log.xlsx  pyproject.toml  setup.sh
configs/: data_schema.yaml
notebooks/: demo_notebook.ipynb  example_excel_file.xlsx  example_input_sheet.xlsx  example_output.xlsx
src/: expense_tracker.py
src/transaction_formatters/: base_formatter.py  capital_one.py  discover.py
src/utils/: data_helper.py  file_helper.py  validation.py
tests/: test_base_formatter.py  test_capital_one.py  test_data_helper.py  test_discover.py  test_expense_tracker.py  test_file_helper.py  test_validation.py
tests/fixtures/: cap_one_all_credit.csv  discover_all_credit.csv  empty_cap_one.csv  empty_discover.csv  example_cap_one.csv  example_discover.csv  example_excel_file.xlsx  test_write_to_excel.xlsx
